# home-station-1

./: .gitignore  Cargo.toml  LICENSE  README.md  make-config.sh.example  make.sh
src/: main.rs
src/ui/: actor.rs  config.rs  constructor.rs  mod.rs
src/ui/components/: bottom.rs  left.rs  mod.rs  right.rs  separators.rs
src/utils/: mod.rs
src/weather/: config.rs  mod.rs  structs.rs
src/weather/messages/: get_state.rs  mod.rs
