[package]
name = "home-station"
version = "0.0.1"
authors = ["Patryk Wychowaniec <wychowaniec.patryk@gmail.com>"]

[dependencies]
actix = "0.5"
chrono = "0.4"
config = "0.8"
futures = "*"
log = "0.4"
simple_logger = "0.5"
pwr_airly = { path = "../pwr_airly" }
pwr-hd44780 = { path = "../pwr-hd44780" }
